🪟 🐛 Update connection header width to prevent enabled switch from wrapping (#5093)

--- a/airbyte-webapp/src/pages/connections/ConnectionPage/ConnectionPageTitle.module.scss
+++ b/airbyte-webapp/src/pages/connections/ConnectionPage/ConnectionPageTitle.module.scss
@@ -2,7 +2,7 @@
 @use "scss/variables";
 
 .container {
-  width: 650px;
+  width: variables.$width-connection-header;
   margin: 0 auto;
   text-align: center;
   padding: variables.$spacing-lg variables.$spacing-xl 0;
