--- a/airbyte-webapp/src/scss/_variables.scss
+++ b/airbyte-webapp/src/scss/_variables.scss
@@ -34,6 +34,7 @@ $width-size-menu: 93px;
 $min-width-main-page-content: 1280px - $width-size-menu;
 $width-wide-menu: 200px;
 $width-max-notification: 600px;
+$width-connection-header: 680px;
 
 $width-modal-sm: 492px;
 $width-modal-md: 585px;
